<resources>
    <string name="app_name">LayoutShowcaseTest</string>
    <string name="red_string">red</string>
    <string name="green_string">green</string>
    <string name="blue_string">blue</string>
    <string name="yellow_string">yellow</string>
    <string name="row_one_string">row one</string>
    <string name="row_two_string">row two</string>
    <string name="row_three_string">row three</string>
    <string name="row_four__string">row four</string>


    <string name="ok_string">OK</string>
    <string name="cancel_string">Cancel</string>
    <string name="type_here_string">Type here:</string>


    <string name="test_string">Test String</string>


    <string name="open_string">Open&#8230;</string>
    <string name="ctrl_o_string">Ctrl-O</string>
    <string name="save_string">Save&#8230;</string>
    <string name="ctrl_s_string">Ctrl-S</string>
    <string name="save_as_string">Save As&#8230;</string>
    <string name="ctrl_shift_s_string">Ctrl-Shift-S</string>
    <string name="x_string">X</string>
    <string name="import_string">Import&#8230;</string>
    <string name="export_string">Export&#8230;</string>
    <string name="ctrl_e_string">Ctrl-E</string>
    <string name="quit_string">Quit</string>
</resources>
