<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
     Inner LinearLayout with horizontal orientation
		and layout weight of 1 out of 4
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <!-- TextView with layout weight of 1 out of 4 -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#F44336"
            android:gravity="center"
            android:text="@string/red_string"
            android:textSize="24sp"
            android:textColor="#FFFFFF" />

        <!-- TextView with layout weight of 1 out of 4 -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:gravity="center"
            android:text="@string/green_string"
            android:textSize="24sp"
            android:textColor="#FFFFFF" />

        <!-- TextView with layout weight of 1 out of 4 -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#2196F3"
            android:gravity="center"
            android:text="@string/blue_string"
            android:textSize="24sp"
            android:textColor="#FFFFFF" />

        <!-- TextView with layout weight of 1 out of 4 -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFEB3B"
            android:gravity="center"
            android:text="@string/yellow_string"
            android:textSize="24sp"
            android:textColor="#000000" />
    </LinearLayout>

    <!--
     Inner LinearLayout with vertical orientation
		and layout weight of 3 out of 4
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="4">

        <!-- TextView with layout weight of 1 out of 4 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/row_one_string"
            android:textSize="15pt"
            android:gravity="center"
            android:background="#3F51B5"
            android:textColor="#FFFFFF" />

        <!-- TextView with layout weight of 1 out of 4 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/row_two_string"
            android:textSize="15pt"
            android:gravity="center"
            android:background="#E8EAF6"
            android:textColor="#000000" />

        <!-- TextView with layout weight of 1 out of 4 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/row_three_string"
            android:textSize="15pt"
            android:gravity="center"
            android:background="#C5CAE9"
            android:textColor="#000000" />

        <!-- TextView with layout weight of 1 out of 4 -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/row_four__string"
            android:textSize="15pt"
            android:gravity="center"
            android:background="#9FA8DA"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>